--- a/estilos.css
+++ b/estilos.css
@@ -59,9 +59,10 @@ nav#menu {
 nav#menu ul {
     list-style: none;
     text-transform: uppercase;
-    position: absolute;
-    top: -20px;
-    left:300px;
+    position: fixed;
+    top: 300px;
+    left:3px;
+    right: 300px;
 }
 nav#menu li{
     display: inline-block;
